PLANET-7103 Fix comment form logged in text overlap
If the user name is too long then before this fix the logged in text would overlap with comment form title

--- a/assets/src/scss/pages/post/_comments-form.scss
+++ b/assets/src/scss/pages/post/_comments-form.scss
@@ -87,6 +87,8 @@
       position: absolute;
       top: 32px;
       right: 32px;
+      max-width: 70%;
+      line-height: 1.3;
 
       html[dir="rtl"] & {
         left: 32px;
